# llvm-seacrits

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TypeInfoHashPass.cpp
plugins/: CMakeLists.txt
plugins/src/: TypeInfoHashPass.cpp
src/: example.cpp
